# reeve

./: AGENTS.md  Cargo.toml  README.md  security.yaml  skills-lock.json
.agents/agents/: answer-verifier-agent.md  chief-agent.md
.agents/skills/chief-autopilot/: SKILL.md
.agents/skills/chief-grill/: SKILL.md
.agents/skills/chief-init/: SKILL.md
.agents/skills/chief-install/: SKILL.md
.agents/skills/chief-plan/: SKILL.md
.agents/skills/chief-retro/: SKILL.md
.agents/skills/chief-rule/: SKILL.md
.agents/skills/chief-upgrade/: SKILL.md
.agents/skills/dump-commit/: SKILL.md
.agents/skills/grill-design/: SKILL.md
.agents/skills/shape-up/: SKILL.md
.chief/: _backlog.md
.chief/_grill/closed/: 0001-reeve-design.md  (+1 more)
.claude/agents/: answer-verifier-agent.md
.claude/skills/: chief-autopilot  chief-grill  chief-init  chief-install  chief-plan  chief-retro  chief-rule  chief-upgrade  dump-commit  grill-design  shape-up
.github/workflows/: publish.yml
crates/reeve/: Cargo.toml
crates/reeve-core/: Cargo.toml
crates/reeve-pact/: Cargo.toml
crates/reeve/src/: lib.rs  main.rs
crates/reeve/src/core/: engine.rs  executor.rs
crates/reeve/src/pact/: error.rs  kinds.rs  mod.rs  presets.rs  schema.rs
crates/reeve/tests/: cli.rs
crates/warden/: Cargo.toml
crates/warden-core/: Cargo.toml
crates/warden-core/src/: engine.rs  executor.rs  lib.rs  parse.rs
crates/warden-pact/: Cargo.toml
docs/: development-publish.md
draft/: increment-1.md  increment-2.md  reeve-shell.md  spec-v2.md  spec-v3.md  spec.md
examples/: sysinfo.rhai  workspace-demo.rhai
pacts/: linux-readonly.yaml  unix-readonly.yaml
shell/: package.json
shell/draft/: reeve-shell-v0.md
src/: lib.rs  security.rs
src/core/: audit.rs  engine.rs  executor.rs  fs.rs  home.rs  logging.rs  mod.rs  parse.rs  run_context.rs
src/pact/: engine.rs  parse.rs  presets.rs  schema.rs
tests/: cli.rs
tests/fixtures/: test-fixtures.yaml
(+58 files in other folders)
