[package]
name = "reeve"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Allowlist-first runtime for Rhai automation scripts"
license = "Apache-2.0"
repository = "https://github.com/thaitype/reeve"
readme = "README.md"
keywords = ["allowlist", "rhai", "automation", "scripting", "sandbox"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "reeve"
path = "src/lib.rs"

[[bin]]
name = "reeve"
path = "src/bin/reeve.rs"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
rhai = { version = "1.19", features = ["sync", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
regex = "1"
uuid = { version = "1", features = ["v4", "v7"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
