[package]
name = "reeve"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reeve-core = { path = "../reeve-core" }
reeve-pact = { path = "../reeve-pact" }
clap = { version = "4", features = ["derive"] }
rhai = { version = "1.19", features = ["sync", "serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
