[package]
name = "warden-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rhai = { version = "1.19", features = ["sync", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
warden-pact = { path = "../warden-pact" }
wait-timeout = "0.2"
